--- a/CineSearch/Supporting Files/Base.lproj/Main.storyboard
+++ b/CineSearch/Supporting Files/Base.lproj/Main.storyboard
@@ -589,42 +589,42 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Bjz-5D-4dq">
-                                        <rect key="frame" x="16" y="174" width="342" height="175"/>
+                                        <rect key="frame" x="16" y="174" width="340" height="196"/>
                                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="175" id="eJa-Yz-LJ7"/>
+                                            <constraint firstAttribute="height" constant="196" id="eJa-Yz-LJ7"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qwU-0U-Nm3">
-                                            <size key="itemSize" width="82" height="173"/>
+                                            <size key="itemSize" width="102" height="186"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CastCell" id="ZA4-KT-Rim" customClass="CastCollectionViewCell">
-                                                <rect key="frame" x="0.0" y="1" width="82" height="173"/>
+                                                <rect key="frame" x="0.0" y="5" width="102" height="186"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="82" height="173"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="102" height="186"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o1A-af-U5E">
-                                                            <rect key="frame" x="0.0" y="0.0" width="82" height="123"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="102" height="136"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" secondItem="o1A-af-U5E" secondAttribute="height" multiplier="2:3" id="TGZ-Mz-Jfg"/>
+                                                                <constraint firstAttribute="width" secondItem="o1A-af-U5E" secondAttribute="height" multiplier="3:4" id="TGZ-Mz-Jfg"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="E3L-a2-eed">
-                                                            <rect key="frame" x="0.0" y="131" width="82" height="42"/>
+                                                            <rect key="frame" x="0.0" y="144" width="102" height="42"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMc-Hg-0Gd">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="82" height="18.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="102" height="18.5"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Role" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01t-35-gzf">
-                                                                    <rect key="frame" x="0.0" y="21.5" width="82" height="20.5"/>
+                                                                    <rect key="frame" x="0.0" y="21.5" width="102" height="20.5"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="15"/>
                                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
@@ -653,13 +653,13 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Bjz-5D-4dq" firstAttribute="leading" secondItem="6a9-dH-WUd" secondAttribute="leading" constant="16" id="1K8-kl-qfP"/>
-                                    <constraint firstAttribute="trailing" secondItem="Bjz-5D-4dq" secondAttribute="trailing" constant="16" id="1kb-P2-Efj"/>
+                                    <constraint firstAttribute="trailing" secondItem="Bjz-5D-4dq" secondAttribute="trailing" constant="18" id="1kb-P2-Efj"/>
                                     <constraint firstItem="Bjz-5D-4dq" firstAttribute="top" secondItem="2sG-my-td0" secondAttribute="bottom" constant="24" id="57k-Ql-Mge"/>
                                     <constraint firstAttribute="trailing" secondItem="2sG-my-td0" secondAttribute="trailing" constant="16" id="EfN-KV-z37"/>
                                     <constraint firstItem="Lhs-6n-4To" firstAttribute="leading" secondItem="6a9-dH-WUd" secondAttribute="leading" constant="16" id="FA7-Hj-lcf"/>
                                     <constraint firstAttribute="trailing" secondItem="aBR-Fq-F9l" secondAttribute="trailing" constant="16" id="Zet-TS-xko"/>
                                     <constraint firstItem="aBR-Fq-F9l" firstAttribute="top" secondItem="Lhs-6n-4To" secondAttribute="bottom" constant="2.5" id="dXx-g5-ETt"/>
-                                    <constraint firstAttribute="bottom" secondItem="Bjz-5D-4dq" secondAttribute="bottom" id="e9I-Dp-4sR"/>
+                                    <constraint firstAttribute="bottom" secondItem="Bjz-5D-4dq" secondAttribute="bottom" constant="16" id="e9I-Dp-4sR"/>
                                     <constraint firstItem="Lhs-6n-4To" firstAttribute="top" secondItem="6a9-dH-WUd" secondAttribute="top" constant="16" id="hMg-aZ-p7L"/>
                                     <constraint firstAttribute="trailing" secondItem="Lhs-6n-4To" secondAttribute="trailing" constant="16" id="mAM-TH-Bmz"/>
                                     <constraint firstItem="2sG-my-td0" firstAttribute="leading" secondItem="6a9-dH-WUd" secondAttribute="leading" constant="16" id="nwu-q7-nnO"/>
